# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "RuStream"
version = "0.0.5"
description = "Self-hosted Streaming Engine, that can render videos via authenticated sessions."
license = "MIT"
documentation = "https://docs.rs/RuStream"
homepage = "https://github.com/thevickypedia/RuStream"
repository = "https://github.com/thevickypedia/RuStream"
rust-version = "1.76.0"
keywords = ["asynchronous-server", "self-hosted", "streaming-engine", "symmetric-encryption", "fernet-cryptography"]
categories = ["web-programming::http-server", "asynchronous", "algorithms", "authentication", "rendering::engine"]
include = ["/src", "LICENSE"]
exclude = [".github", ".gitignore", "README.md"]
edition = "2021"
authors = ["Vignesh Rao"]

[lib]
name = "rustream"
path = "src/lib.rs"

[[bin]]
name = "rustream"
path = "src/main.rs"

# https://docs.rs/releases/queue
# https://docs.rs/about/metadata
# https://doc.rust-lang.org/cargo/reference/config.html?highlight=RUSTDOCFLAGS
# export RUSTDOCFLAGS="document-private-items no-deps"
[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
actix-rt = "2.9.0"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-files = "0.6.5"
actix-cors = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.11.1"
log = "0.4.20"
lazy_static = "1.4.0"
base64 = "0.21.7"
sha2 = "0.10.8"
rand = "0.8.5"
fernet = "0.2.1"
minijinja = { version =  "1.0.12", features = ["loader"] }
url = "2.5.0"
regex = "1.5"
walkdir = "2.3.2"
openssl = "0.10"
dotenv = "0.15.0"
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
